--- a/src/index.html
+++ b/src/index.html
@@ -15,27 +15,12 @@
 
 <body class="light">
   <load="partials/header.html" />
-  <div class="all-home">
-
-    <load="partials/home-all.html" />
-
-    <!-- <load="partials/home-menu.html" />
-
-    <load="partials/home-ukraine.html" />
-
-
-    <load="partials/home-books.html" /> -->
-
-    <load="partials/home-books.html" />
-  </div>
-
+  <load="partials/home-menu.html" />
+  <load="partials/home-ukraine.html" />
+  <load="partials/home-books.html" />
   <load="partials/modal-window.html" />
-
-
   <load="partials/pagination.html" />
-
   <load="partials/loader.html" />
-
   <load="partials/scroll-up.html" />
 
   <script type="module" src="./main.js"></script>
